--- a/chattr/macos/Runner/Configs/AppInfo.xcconfig
+++ b/chattr/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = chattr
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.chattr
+PRODUCT_BUNDLE_IDENTIFIER = com.riflo.chattr
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
