--- a/chattr/pubspec.yaml
+++ b/chattr/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   giphy_get: ^3.6.1+1
   record: ^6.1.1
   path_provider: ^2.1.5
+  web_socket_channel: ^3.0.0
+  path: ^1.9.1
+  cross_file: ^0.3.5+1
+  app_links: ^6.4.1
 
 dev_dependencies:
   flutter_test:
